8-13 做了shiro和jwt 令牌过期时间 认证授权 通过缓存redis来刷新令牌 AOP

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,3 +64,9 @@ logging:
     com.mixiao.emos.wx.db.dao : warn #警告级别
   pattern:
     console: "%d{HH:mm:ss}  %-5level  %msg%n"
+
+emos:
+  jwt:
+    secret: abc123456
+    expire: 5 #5天过期
+    cache-expire: 10 #缓存10D
